--- a/style.css
+++ b/style.css
@@ -744,6 +744,11 @@ summary::-webkit-details-marker {
     margin-top: 48px;
 }
 
+.button-wrap:hover {
+    background-color: #FF6A6A;
+    color: white;
+}
+
 .footer-top {
     background: url(img/footer-bg.jpg) bottom no-repeat;
     background-color: #f8f8f828;
@@ -846,8 +851,7 @@ summary::-webkit-details-marker {
     list-style: none;
 }
 
-.media link svg:hover svg path {
-    stroke: #F16D7F;
+.icon:hover path {
     fill: #F16D7F;
 }
 
