--- a/style.scss
+++ b/style.scss
@@ -13,6 +13,7 @@ img {
 
 a {
     text-decoration: none;
+    color: inherit;
 }
 
 summary {
@@ -20,6 +21,10 @@ summary {
     &::-webkit-details-marker {
         display: none;
     }
+}
+
+li {
+    list-style-type: none;
 }
 
 .center {
@@ -241,7 +246,6 @@ summary {
 }
 
 .product-box {
-    padding-bottom: 128px;
     &__heading {
         font-style: normal;
         font-weight: 400;
@@ -269,6 +273,7 @@ summary {
         -ms-flex-pack: center;
         justify-content: center;
         gap: 30px;
+        margin-bottom: 48px;
     }
 }
 
@@ -352,6 +357,34 @@ summary {
         font-size: 16px;
         line-height: 19px;
         color: #F16D7F;
+    }
+}
+
+.pages {
+    display: flex;
+    gap: 16px;
+    align-items: center;
+    width: 284px;
+    height: 44px;
+    border: 1px solid #EBEBEB;
+    padding: 12px 15px 13px 16px;
+    box-sizing: border-box;
+    margin: 0 auto 96px auto;
+    &__numbers {
+        width: 203px;
+        text-align: justify;
+        color: #C4C4C4;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 300;
+        line-height: normal;
+        &__list {
+            display: flex;
+            justify-content: space-between;
+        }
+    }
+    &__number:hover {
+        color: #EF5B70;
     }
 }
 
