--- a/style.scss
+++ b/style.scss
@@ -656,6 +656,7 @@ li {
         border: #FF6A6A;
         align-items: center;
         margin-top: 48px;
+        margin-bottom: 95px;
     }
 }
 
