--- a/style.scss
+++ b/style.scss
@@ -343,6 +343,10 @@ li {
         font-size: 13px;
         line-height: 16px;
         color: #000000;
+        transition: all 1s;
+        &:hover {
+            color: #F16D7F;
+        }
     }
     &__text {
         font-style: normal;
@@ -928,10 +932,17 @@ li {
                 margin-top: 6px;
             }
         }
+        &__link {
+            transition: all 1s;
+            &:hover .cart__dsc__name {
+                color: #EF5B70;
+            }
+        }
         &__name {
             color: #222;
             font-size: 24px;
             margin-bottom: 42px;
+            transition: all 1s;
         }
         &__price {
             color: #EF5B70;
@@ -966,6 +977,12 @@ li {
         line-height: normal;
         background-color: #fff;
         border: 1px solid #A4A4A4;
+        transition: all 1s;
+        &:hover {
+            background-color: #F16D7F;
+            color: #FFF;
+            font-weight: 900;
+        }
     }
     &__right {
         max-width: 360px;
@@ -993,6 +1010,12 @@ li {
             padding: 10px 15px 12px;
             background-color: white;
             border-width: 1px;
+            transition: all 1s;
+            &:hover {
+                background-color: #F16D7F;
+                color: #FFF;
+                font-weight: 900;
+            }
         }
     }
 }
@@ -1048,6 +1071,12 @@ li {
         padding: 15px 40px 16px;
         width: 273px;
         box-sizing: border-box;
+        transition: all 1s;
+        &:hover {
+            background-color: #FFF;
+            color: #F16D7F;
+            font-weight: 900;
+        }
     }
 }
 
