--- a/style.css
+++ b/style.css
@@ -465,9 +465,15 @@ li {
 }
 
 .sort {
+  position: absolute;
+  top: 13px;
   display: flex;
   gap: 28px;
   align-items: center;
+}
+.sort-box {
+  position: relative;
+  width: 400px;
 }
 .sort__summary {
   color: #6F6E6E;
@@ -872,10 +878,6 @@ li {
   font-weight: 900;
 }
 
-.total {
-  background-color: #F5F3F3;
-  padding: 39px 34px;
-}
 .total__subtotal {
   display: flex;
   justify-content: space-between;
@@ -1048,14 +1050,84 @@ li {
   }
   .filter-sort {
     padding-top: 24px;
+    margin-bottom: 15px;
+    gap: 52px;
+  }
+  .filter {
+    padding: 0;
+  }
+  .sort {
+    top: 0;
+  }
+  .sort__summary {
+    margin-bottom: 0;
   }
   .product-box__content {
     gap: 16px;
-    margin-top: 74px;
-    margin-bottom: 32px;
+    margin-bottom: 41px;
+    margin-top: 0;
+  }
+  .product-box__product {
+    margin-bottom: 129px;
+  }
+  .slider {
+    height: 624px;
+  }
+  .content {
+    margin-top: 0;
+  }
+  .content__line-big {
+    margin-bottom: 130px;
   }
   .button-wrap {
     margin-bottom: 65px;
+  }
+  .pages {
+    margin-bottom: 63px;
+  }
+  .product__sort {
+    top: 423px;
+  }
+  .cart__content {
+    display: block;
+  }
+  .cart__left {
+    max-width: 734px;
+    margin-bottom: 64px;
+  }
+  .cart__card {
+    width: 734px;
+  }
+  .cart__dsc {
+    width: 472px;
+  }
+  .cart__buttons {
+    margin-top: 62px;
+    justify-content: center;
+    gap: 48px;
+  }
+  .cart__right {
+    max-width: 734px;
+    display: flex;
+    gap: 15px;
+  }
+  .cart__right__form {
+    width: 360px;
+  }
+  .cart__right__button {
+    box-sizing: border-box;
+    width: 106px;
+    padding: 10px 14px 12px 15px;
+  }
+  .cart .total {
+    max-height: 214px;
+    padding-top: 78px;
+    padding-bottom: 42px;
+    box-sizing: border-box;
+  }
+  .cart .total__box {
+    background-color: #F5F3F3;
+    padding: 39px 34px;
   }
   .advantages {
     padding-top: 48px;
