--- a/style.scss
+++ b/style.scss
@@ -202,6 +202,9 @@ li {
     padding-bottom: 96px;
     &__item {
         position: relative;
+        &_big {
+            background-image: url(img/sibig.jpg);
+        }
     }
     &__content {
         position: absolute;
@@ -508,6 +511,9 @@ li {
     box-sizing: border-box;
     position: absolute;
     z-index: 1;
+    &__mobile {
+        display: none;
+    }
     &-box {
         position: relative;
         height: 40px;
@@ -1388,43 +1394,207 @@ li {
 }
 
 @media (max-width: 767px) {
+    .center {
+        padding-left: calc(50% - 178px);
+        padding-right: calc(50% - 178px);
+    }
     .header__link-site {
         display: none;
     }
     .promo {
         height: 363px;
-    }
-    .promo__img {
-        display: none;
-    }
-    .promo__content {
-        padding: 0;
-        margin: 0 auto;
-    }
-    .promo__title {
-        font-size: 38px;
-        line-height: 46px;
-    }
-    .promo__heading {
-        font-size: 20px;
-        line-height: 24px;
+        &__info {
+            margin-top: 50%;
+        }
+        &__img {
+            display: none;
+        }
+        &__content {
+            padding: 0;
+            margin: 0 auto;
+        }
+        &__title {
+            font-size: 38px;
+            line-height: 46px;
+        }
+        &__heading {
+            font-size: 20px;
+            line-height: 24px;
+        }
     }
     .sale {
         display: flex;
-        flex-wrap: wrap;
+        flex-direction: column;
         justify-content: center;
+        align-items: center;
         gap: 32px;
+        padding-top: 64px;
         padding-bottom: 64px;
     }
     .sale__item {
         max-width: 343px;
     }
-    .sale__item_big img {
+    .sale__item_big {
         width: 100%;
         height: 100%;
         object-fit: cover;
     }
-    .footer-top {
-        background: url(img/footer-bg-small.jpg);
+    .product-box__ {
+        &product {
+            margin-bottom: 64px;
+        }
+        &text {
+            margin-bottom: 65px;
+        }
+    }
+    .button-wrap {
+        margin-bottom: 96px;
+    }
+    .head {
+        flex-direction: column;
+        gap: 32px;
+        padding-top: 24px;
+        padding-bottom: 46px;
+        box-sizing: border-box;
+    }
+    .cart__ {
+        &left {
+            margin-bottom: 48px;
+        }
+        &img {
+            width: 144px;
+            height: 188px;
+        }
+        &title {
+            padding-top: 60px;
+            padding-bottom: 59px;
+            text-align: center;
+            margin-bottom: 39px;
+        }
+        &card {
+            width: 358px;
+            height: 188px;
+        }
+        &dsc {
+            width: 214px;
+            padding-top: 13px;
+            padding-left: 17px;
+            padding-bottom: 37px;
+            font-size: 14px;
+            &__name {
+                font-size: 16px;
+                margin-bottom: 25px;
+            }
+            &__top {
+                font-size: 14px;
+            }
+            &__top__close {
+                width: 10px;
+                height: 11px;
+            }
+            &__quantity {
+                width: 24px;
+                height: 15px;
+            }
+        }
+        &buttons {
+            gap: 9px;
+        }
+        &button {
+            font-size: 12px;
+            color: #575757;
+            padding: 9px 35px;
+        }
+        &right {
+            flex-direction: column;
+            &__form {
+                margin-bottom: 48px;
+            }
+        }
+    }
+    .total {
+        margin-bottom: 96px;
+    }
+    .filter {
+        &-sort {
+            gap: 0;
+        }
+        &__mobile {
+            display: block;
+            margin-left: 8px;
+        }
+        &__summary {
+            visibility: hidden;
+        }
+        &-box {
+            width: 0;
+        }
+    }
+    .sort {
+        gap: 24px;
+        &-box {
+            margin-left: 62px;
+        }
+        &__summary {
+            font-size: 10px;
+        }
+    }
+    .content {
+        margin-bottom: 64px;
+        &__price {
+            margin-bottom: 32px;
+        }
+        &__line-big {
+            width: 175px;
+            margin-bottom: 125px;
+        }
+    }
+    .registration {
+        &__content {
+            flex-direction: column;
+        }
+        &__right {
+            margin-bottom: 100px;
+        }
+    }
+    .form__ {
+        &input {
+            width: 318px;
+        }
+        &button {
+            margin-bottom: 40px;
+        }
+    }
+    .loyalty__ {
+        &heading {
+            font-size: 16px;
+        }
+    }
+    .rewiew p {
+        font-size: 18px;
+    }
+    .subscribe {
+        justify-content: center;
+        padding-top: 59px;
+        &-bottom {
+            font-size: 14px;
+            line-height: 100%;
+        }
+    }
+    .subscribe-form {
+        padding-left: 16px;
+        max-width: 341px;
+        height: 47px;
+    }
+    .footer-bottom {
+        flex-direction: column-reverse;
+        align-items: center;
+        &-wrapper {
+            padding-top: 43px;
+            padding-bottom: 9px;
+        }
+    }
+    .footer-social-list {
+        margin-bottom: 40px;
     }
 }
