--- a/style.css
+++ b/style.css
@@ -414,13 +414,13 @@ li {
 
 .filter {
   width: 100%;
-  padding: 13px 16px 16px;
+  padding: 13px 16px 16px 0;
   box-sizing: border-box;
   position: absolute;
   z-index: 1;
 }
 .filter__mobile {
-  display: none;
+  visibility: hidden;
 }
 .filter-box {
   position: relative;
@@ -446,7 +446,6 @@ li {
 .filter-sort {
   padding-top: 39px;
   display: flex;
-  gap: 30px;
 }
 .filter__summary {
   display: flex;
@@ -490,6 +489,7 @@ li {
 .sort-box {
   position: relative;
   width: 400px;
+  padding-left: 30px;
 }
 .sort__summary {
   color: #6F6E6E;
@@ -1353,6 +1353,7 @@ li {
   }
   .filter__mobile {
     display: block;
+    visibility: visible;
     margin-left: 8px;
   }
   .filter__summary {
@@ -1365,7 +1366,7 @@ li {
     gap: 24px;
   }
   .sort-box {
-    margin-left: 62px;
+    margin-left: 50px;
   }
   .sort__summary {
     font-size: 10px;
